fixed alignments

--- a/mobile.css
+++ b/mobile.css
@@ -167,7 +167,7 @@
   .a-box {
     display: inline-block;
     margin: 0 auto 0 auto;
-    width: 300px;
+    width: 250px;
     text-align: center;
   }
 
@@ -211,7 +211,9 @@
   .box {
     display: flex;
     width: 60%;
-    margin: auto;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 25px;
   }
 
   .box a {
