--- a/style.css
+++ b/style.css
@@ -370,6 +370,7 @@ section {
   width: 60%;
   margin-right: auto;
   margin-left: auto;
+  margin-bottom: 25px;
 }
 
 .box a {
